# nyx

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: linux.yml  macos.yml  prune.yml  windows.yml
docs/: BUILD.md  PHASE0_SMOKE.md  WINDOWS.md
docs/superpowers/specs/: 2026-05-15-nyx-design.md
qml/: Main.qml  Theme.qml
qml/components/: FriendRow.qml  ModePill.qml  NeonBtn.qml  TitleBar.qml
qml/screens/: ActivityScreen.qml  MainScreen.qml  RosterScreen.qml  SettingsScreen.qml  StatusScreen.qml  UninstallScreen.qml
src/: main.cpp
src/core/: cert.cpp  cert.hpp  config.cpp  config.hpp  config_proxy.cpp  config_proxy.hpp  hosts_file.cpp  hosts_file.hpp  launcher.cpp  launcher.hpp  patcher.cpp  patcher.hpp  proxy.cpp  proxy.hpp  riot_paths.cpp  riot_paths.hpp  roster_store.cpp  roster_store.hpp  xmpp.cpp  xmpp.hpp
src/platform/: trust_linux.cpp  trust_mac.mm  trust_win.cpp
src/ui/: app_controller.cpp  app_controller.hpp  presence_model.cpp  presence_model.hpp  roster_model.cpp  roster_model.hpp
tests/: cert_smoke.cpp  xmpp_smoke.cpp
